--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,13 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  provider: ^6.0.5
+  cupertino_icons: ^1.0.2  
+  image_picker: ^1.1.2
+  google_fonts: ^6.2.1
+  uuid: ^4.5.1
+  flutter_riverpod: ^2.6.1
+  location: ^7.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
