--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   flutter_riverpod: ^2.6.1
   location: ^7.0.1
   http: ^1.2.2
+  google_maps_flutter: ^2.9.0
+  path_provider: ^2.1.4
+  path: ^1.9.0
+  sqflite: ^2.4.0
 
 dev_dependencies:
   flutter_test:
